@@ -560,12 +560,21 @@ libspectrum_rzx_read( libspectrum_rzx *rzx, libspectrum_snap **snap,
 		      libspectrum_rzx_signature *signature );
 
 libspectrum_error
+libspectrum_rzx_write2( libspectrum_byte **buffer, size_t *length,
+			libspectrum_rzx *rzx, libspectrum_snap *snap,
+			libspectrum_id_t snap_format,
+			libspectrum_creator *creator, int compress,
+			libspectrum_rzx_dsa_key *key );
+
+libspectrum_error libspectrum_rzx_alloc( libspectrum_rzx **rzx );
+
+/* Deprecated */
+
+libspectrum_error
 libspectrum_rzx_write( libspectrum_byte **buffer, size_t *length,
 		       libspectrum_rzx *rzx, libspectrum_snap *snap,
 		       libspectrum_creator *creator, int compress,
 		       libspectrum_rzx_dsa_key *key );
-
-libspectrum_error libspectrum_rzx_alloc( libspectrum_rzx **rzx );
 
 /*
  * Timex DOCK/EXROM handling routines
